New backup from 02-01-24

--- a/printer_data/config/other-configs/macro.cfg
+++ b/printer_data/config/other-configs/macro.cfg
@@ -10,6 +10,16 @@ gcode:
     PRTOUCH_PROBE_ZOFFSET
     M118 PRTOUCH DONE, LOADING MESH
 
+
+[gcode_macro update_git]
+gcode:
+    RUN_SHELL_COMMAND CMD=update_git_script
+
+[gcode_shell_command update_git_script]
+command: bash -c "bash $HOME/klipper-backup/script.sh"
+timeout: 90.0
+verbose: True
+
 ############################################################################################################
 ############################################################################################################
 ##############################                                                ##############################
