New backup from 02-01-24

--- a/printer_data/config/printer.cfg
+++ b/printer_data/config/printer.cfg
@@ -129,11 +129,11 @@ filament_diameter: 1.750
 heater_pin: PA1
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PC5
-control: pid
+#control: pid
 # tuned for stock hardware with 200 degree Celsius target
-pid_Kp: 27.142
-pid_Ki: 1.371
-pid_Kd: 134.351
+#pid_Kp: 27.142
+#pid_Ki: 1.371
+#pid_Kd: 134.351
 min_temp: 0
 max_temp: 260
 
@@ -281,16 +281,23 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.710000, -0.200000, 0.272500, 0.705000
-#*# 	  -0.782500, -0.280000, 0.182500, 0.602500
-#*# 	  -0.855000, -0.377500, 0.097500, 0.540000
-#*# x_count = 4
-#*# y_count = 3
+#*# 	-0.902500, -0.360000, 0.142500, 0.650000, 1.175000
+#*# 	-0.905000, -0.420000, 0.080000, 0.575000, 1.077500
+#*# 	-0.965000, -0.515000, 0.582500, 0.480000, 1.022500
+#*# 	-0.935000, -0.530000, -0.067500, 0.410000, 0.932500
+#*# x_count = 5
+#*# y_count = 4
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = lagrange
 #*# tension = 0.2
-#*# min_x = 52.18000000000001
-#*# max_x = 167.91
-#*# min_y = 67.96
-#*# max_y = 152.24
+#*# min_x = 30.0
+#*# max_x = 192.44
+#*# min_y = 48.11
+#*# max_y = 171.86
+#*#
+#*# [extruder]
+#*# control = pid
+#*# pid_kp = 30.790
+#*# pid_ki = 1.974
+#*# pid_kd = 120.080
