--- a/printer_data/config/moonraker-obico.cfg
+++ b/printer_data/config/moonraker-obico.cfg
@@ -1,6 +1,6 @@
 [server]
 url = https://app.obico.io
-auth_token = d698f28fe9a7844b8547
+auth_token = 644ef85c9e90d3d14972
 
 [moonraker]
 host = 127.0.0.1
@@ -14,3 +14,6 @@ path = /home/pi/printer_data/logs/moonraker-obico.log
 
 [tunnel]
 
+
+[misc]
+sentry_opt: in
