--- a/printer_data/config/printer.cfg
+++ b/printer_data/config/printer.cfg
@@ -141,11 +141,11 @@ max_temp: 260
 heater_pin: PB2
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: PC4
-control: pid
+#control: pid
 # tuned for stock hardware with 70 degree Celsius target
-pid_kp: 66.371
-pid_ki: 0.846
-pid_kd: 1301.702
+#pid_kp: 66.371
+#pid_ki: 0.846
+#pid_kd: 1301.702
 min_temp: 0
 max_temp: 100
 
@@ -224,6 +224,16 @@ recover_velocity: 25
 
 [respond]
 
+[temperature_sensor E3V3SE]
+sensor_type: temperature_mcu
+min_temp: 0
+max_temp: 100
+
+[temperature_sensor raspberry_pi_4B]
+sensor_type: temperature_host
+min_temp: 10
+max_temp: 100 
+
 [delayed_gcode DELAYED_PRINTER_OFF]
 initial_duration = 0.
 gcode =
@@ -272,6 +282,7 @@ gcode:
     LINE_PURGE
     M118 START MACRO ENDED
 
+[include moonraker_obico_macros.cfg]
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
@@ -301,3 +312,9 @@ gcode:
 #*# pid_kp = 30.790
 #*# pid_ki = 1.974
 #*# pid_kd = 120.080
+#*#
+#*# [heater_bed]
+#*# control = pid
+#*# pid_kp = 62.723
+#*# pid_ki = 0.622
+#*# pid_kd = 1580.608
