--- a/printer_data/config/printer.cfg
+++ b/printer_data/config/printer.cfg
@@ -118,6 +118,7 @@ interpolate: false
 
 [extruder]
 max_extrude_only_distance: 100.0
+max_extrude_cross_section: 6
 pressure_advance: 0.04
 step_pin: PB4
 dir_pin: PB3
