--- a/printer_data/config/KlipperScreen.conf
+++ b/printer_data/config/KlipperScreen.conf
@@ -1,5 +1,9 @@
 
 #~# --- Do not edit below this line. This section is auto generated --- #~#
 #~#
-#~# 
+#~# [main]
+#~# theme = colorized
+#~# screen_blanking = 14400
+#~# 24htime = False
+#~# confirm_estop = True
 #~#
