--- a/printer_data/config/printer.cfg
+++ b/printer_data/config/printer.cfg
@@ -49,7 +49,18 @@ filename: ~/printer_data/config/variables.cfg
 [exclude_object]
 [force_move]
 enable_force_move: True
-
+[firmware_retraction]
+retract_length: 1
+#   The length of filament (in mm) to retract when G10 is activated,
+#   and to unretract when G11 is activated (but see
+#   unretract_extra_length below). The default is 0 mm.
+retract_speed: 40
+#   The speed of retraction, in mm/s. The default is 20 mm/s.
+unretract_extra_length: .8
+#   The length (in mm) of *additional* filament to add when
+#   unretracting.
+unretract_speed: 30
+#   The speed of unretraction, in mm/s. The default is 10 mm/s.
 
 ##########################################
 ################ INCLUDES ################
@@ -284,6 +295,7 @@ gcode:
     M118 START MACRO ENDED
 
 [include moonraker_obico_macros.cfg]
+
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
@@ -293,20 +305,21 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	-0.902500, -0.360000, 0.142500, 0.650000, 1.175000
-#*# 	-0.905000, -0.420000, 0.080000, 0.575000, 1.077500
-#*# 	-0.965000, -0.515000, 0.582500, 0.480000, 1.022500
-#*# 	-0.935000, -0.530000, -0.067500, 0.410000, 0.932500
+#*# 	  -0.905000, -0.300000, 0.307500, 0.817500, 1.177500
+#*# 	  -1.067500, -0.510000, 0.047500, 0.560000, 1.040000
+#*# 	  -1.077500, -0.597500, -0.062500, 0.442500, 0.942500
+#*# 	  -0.892500, -0.680000, -0.140000, 0.350000, 0.835000
+#*# 	  -1.282500, -0.757500, -0.230000, 0.245000, 0.742500
 #*# x_count = 5
-#*# y_count = 4
+#*# y_count = 5
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = lagrange
 #*# tension = 0.2
 #*# min_x = 30.0
-#*# max_x = 192.44
-#*# min_y = 48.11
-#*# max_y = 171.86
+#*# max_x = 205.0
+#*# min_y = 30.0
+#*# max_y = 215.47
 #*#
 #*# [extruder]
 #*# control = pid
