--- a/printer_data/config/printer.cfg
+++ b/printer_data/config/printer.cfg
@@ -117,7 +117,7 @@ microsteps: 16
 rotation_distance: 8
 endstop_pin: probe:z_virtual_endstop
 position_min: -3
-position_max: 250
+position_max: 245
 
 
 [tmc2208 stepper_z]
@@ -203,8 +203,9 @@ probe_with_touch_mode: True
 speed: 120
 horizontal_move_z: 5
 mesh_min: 30,30         # Need to handle head distance with cr-touch (bl_touch)
-mesh_max: 205,215.5       # Max probe range
-probe_count: 5,5
+mesh_max: 205,215.5     # Max probe range
+probe_count: 10,10
+mesh_pps: 4, 4
 algorithm: bicubic
 
 [output_pin beeper]
@@ -304,21 +305,26 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.905000, -0.300000, 0.307500, 0.817500, 1.177500
-#*# 	  -1.067500, -0.510000, 0.047500, 0.560000, 1.040000
-#*# 	  -1.077500, -0.597500, -0.062500, 0.442500, 0.942500
-#*# 	  -0.892500, -0.680000, -0.140000, 0.350000, 0.835000
-#*# 	  -1.282500, -0.757500, -0.230000, 0.245000, 0.742500
-#*# x_count = 5
-#*# y_count = 5
-#*# mesh_x_pps = 2
-#*# mesh_y_pps = 2
-#*# algo = lagrange
+#*# 	  -0.470000, -0.285000, -0.087500, 0.040000, 0.195000, 0.425000, 0.585000, 0.712500, 0.880000, 1.020000
+#*# 	  -0.612500, -0.387500, -0.205000, -0.077500, 0.100000, 0.295000, 0.475000, 0.615000, 0.762500, 0.912500
+#*# 	  -0.720000, -0.485000, -0.287500, -0.180000, -0.027500, 0.190000, 0.352500, 0.500000, 0.655000, 0.747500
+#*# 	  -0.805000, -0.515000, -0.385000, -0.282500, -0.115000, 0.075000, 0.247500, 0.402500, 0.565000, 0.657500
+#*# 	  -0.892500, -0.582500, -0.470000, -0.392500, -0.232500, -0.027500, 0.130000, 0.290000, 0.432500, 0.532500
+#*# 	  -0.955000, -0.785000, -0.605000, -0.497500, -0.332500, -0.137500, 0.042500, 0.185000, 0.365000, 0.440000
+#*# 	  -0.942500, -0.845000, -0.727500, -0.577500, -0.432500, -0.227500, -0.075000, 0.117500, 0.250000, 0.352500
+#*# 	  -0.965000, -0.927500, -0.825000, -0.697500, -0.525000, -0.330000, -0.145000, 0.012500, 0.195000, 0.267500
+#*# 	  -1.200000, -1.060000, -0.925000, -0.820000, -0.640000, -0.425000, -0.255000, -0.115000, 0.072500, 0.197500
+#*# 	  -1.425000, -1.192500, -1.027500, -0.882500, -0.730000, -0.500000, -0.342500, -0.182500, 0.032500, 0.142500
+#*# x_count = 10
+#*# y_count = 10
+#*# mesh_x_pps = 4
+#*# mesh_y_pps = 4
+#*# algo = bicubic
 #*# tension = 0.2
 #*# min_x = 30.0
-#*# max_x = 205.0
+#*# max_x = 204.96
 #*# min_y = 30.0
-#*# max_y = 215.47
+#*# max_y = 215.49
 #*#
 #*# [extruder]
 #*# control = pid
