New Backup on boot 02/14/24

--- a/printer_data/config/printer.cfg
+++ b/printer_data/config/printer.cfg
@@ -278,6 +278,9 @@ gcode:
     {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
     M118 RESET EXTRUDER
     G92 E0 ; Reset Extruder
+    M118 PRTOUCH_PROBE_ZOFFSET
+    PRTOUCH_PROBE_ZOFFSET
+    M118 END OF PRTOUCH_PROBE_ZOFFSET
     M118 BED_MESH_CALIBRATE
     BED_MESH_CALIBRATE
     M118 END OF BED_MESH_CALIBRATE
