--- a/printer_data/config/other-configs/macro.cfg
+++ b/printer_data/config/other-configs/macro.cfg
@@ -33,7 +33,7 @@ gcode:
     M106 S0 ; turn off cooling fan
     M104 S0 ; turn off extruder
     M140 S0 ; turn off bed
-    # M84 ; disable motors
+    M84 ; disable motors
     M117 PRINT COMPLETE!
 
 
